Run the MetaDataMover with an event loop.

It is using the exact same approach as the file indexer does: a new
thread is created and started and the MetaDataMover is then
QObject::moveToThread'ed to it.

This fixes mem leaks caused by DBus events that are not cleaned up.

BUG: 226676